# untitled9

./: CMakeLists.txt
punto1_xavier/: camb_punt_lib.c  camb_punt_lib.h  camb_punt_main.c  camb_punt_minunit.c
punto2_xavier/: busc_lib.c  busc_lib.h  busc_main.c  busc_minunit.c
punto3_xavier/: elim_ora_lib.c  elim_ora_lib.h  elim_ora_main.c  elim_ora_minunit.c
punto5_xavier/: elim_matr_lib.c  elim_matr_lib.h  elim_matr_main.c  elim_matr_minunit.c
